--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -1,5 +1,6 @@
-messages:
-  success: "<green><underline>You did it!"
-  noPermission: "<red>You do not have permission to use this command."
-  onlyPlayer: "<red>This command can only be run by a player."
-  reloaded: "<bold><yellow>Plugin Reloaded..."
+success: "<green><underline>You did it!"
+noPermission: "<red>You do not have permission to use this command."
+onlyPlayer: "<red>This command can only be run by a player."
+reloaded: "<bold><yellow>Plugin Reloaded..."
+header: "--------------------"
+prefix: "<rainbow><bold>GitGrabber<white: "
