--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -3,4 +3,5 @@ noPermission: "<red>You do not have permission to use this command."
 onlyPlayer: "<red>This command can only be run by a player."
 reloaded: "<bold><yellow>Plugin Reloaded..."
 header: "--------------------"
+footer: "--------------------"
 prefix: "<rainbow><bold>GitGrabber<white: "
