--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ version: '${project.version}'
 main: io.carsonjf.gitgrabber.GitGrabber
 api-version: 1.20
 description: Work smarter not harder
+depend: [MythicMobs]
 commands:
   gitgrabber:
     description: Your command description
